Fix dimensions to not overflow mobile website

--- a/css/palaver.css
+++ b/css/palaver.css
@@ -319,8 +319,8 @@ section:nth-of-type(2) ul li:nth-of-type(4) h3::before {
 body#iphone aside {
     background: url(../images/iphone.png) no-repeat center;
     background-size: 100% 100%;
-    width: 339px;
-    height: 600px;
+    width: 320px;
+    height: 566px;
     margin: 252px auto 0 auto;
     left: 0;
     right: 0;
